--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,13 +8,26 @@
 }
 
 body {
-    background-image: url('../assets/background.jpg');
+    background-image: url('../assets/background-coba.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     width: 100%;
     height: 100%;
+    position: absolute;
 }
+
+.buttons {
+    font: bold 11px Arial;
+    text-decoration: none;
+    background-color: #EEEEEE;
+    color: #333333;
+    padding: 2px 6px 2px 6px;
+    border-top: 1px solid #CCCCCC;
+    border-right: 1px solid #333333;
+    border-bottom: 1px solid #333333;
+    border-left: 1px solid #CCCCCC;
+  }
 
 .card.chart {
     padding: 20px 25px;
@@ -28,6 +41,13 @@ body {
     right: 10vw;
     top: 70px;
     z-index: 999;
+}
+
+.card.notif-block {
+    overflow-y: auto;
+    top: 20px;
+    position:absolute;
+    height:5vh;
 }
 
 /* .intro {
