--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,13 +8,28 @@
 }
 
 body {
-    background-image: url('../assets/background-coba.jpg');
+    background-image: url('../assets/background.jpg');
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;
+    background-size: cover ;
     width: 100%;
-    height: 100%;
+}
+
+/* .bottom-context {
+	background-image: url('../assets/background.jpg');
+    width: 100%;
+    height: 7vw;
+	background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+} */
+
+.fits {
     position: absolute;
+}
+
+.ket.row {
+    margin-top:5vh;
 }
 
 .buttons {
@@ -50,24 +65,6 @@ body {
     height:5vh;
 }
 
-/* .intro {
-	background-image: url('../assets/home.png');
-    width: 100%;
-    height: 30vw;
-    margin-top: 30px;
-	background-repeat: no-repeat;
-	background-size: cover;
-	justify-content: center;
-} */
-
-/* .bottom-content {
-	background-image: url('../assets/home2.png');
-    width: 100%;
-    height: 25vw;
-	background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-} */
 
 .card.login-card {
     height:27vw;
@@ -353,6 +350,6 @@ table.table .avatar {
 }
 
 .nav-item a:hover {
-    background-color: #dddddd;
+    background-color: #656565;
     border-radius: 15%;
 }
